k8s/base/cards-api-gateway-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cards-api-gateway-service
  labels:
    app: cards-api-gateway-service
spec:
  type: ClusterIP
  selector:
    app: cards-api-gateway-service
  ports:
    - name: http
      port: 8080
      targetPort: http
