k8s/base/cards-api-gateway-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cards-api-gateway
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "5m"
spec:
  ingressClassName: nginx
  rules:
    - host: cards.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cards-api-gateway-service
                port:
                  number: 8080
